@@ -1,12 +1,13 @@
 <?php
-    session_start();
-    if (isset($_SESSION['tipodeusuario'])) {
-        if ($_SESSION['tipodeusuario'] != 'paciente') {
-            header('location: /vittaclinic2/index.php');
-        }
-    } else {
-        header('location: /vittaclinic2/paginas/comum/entrar.php');
+session_start();
+//Redirecionador de acesso não autorizado
+if (isset($_SESSION['tipodeusuario'])) {
+    if ($_SESSION['tipodeusuario'] != 'paciente') {
+        header('location: /vittaclinic2/index.php');
     }
+} else {
+    header('location: /vittaclinic2/paginas/comum/entrar.php');
+}
 ?>
 <!DOCTYPE html>
 <html lang="eng">
